--- a/app/views/blog/mailchimp_integration.html.erb
+++ b/app/views/blog/mailchimp_integration.html.erb
@@ -33,11 +33,11 @@
 
             <h3>Building the integration</h3>
 
-            <p>1.To access to the tenant in CenitHub, you should do sign-in <%= linked_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %></p>
+            <p>1.To access to the tenant in CenitHub, you should do sign-in <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %></p>
 
             <p>And then press the button data integrator, which prompted an username and password, remember if you are not registered, you can create a totally free account by Sign Up.</p>
 
-            <p>2. Will usually result in a redirect to <%= linked_to 'cenithub.com', 'https://cenithub.com' %>, where we can see in Dashboard components previously installed.  Now, we go to the Shared Collection menu option and list the available integrations. Once it has been found MailChimp-1.0.0, we pull.</p> 
+            <p>2. Will usually result in a redirect to <%= link_to 'cenithub.com', 'https://cenithub.com' %>, where we can see in Dashboard components previously installed.  Now, we go to the Shared Collection menu option and list the available integrations. Once it has been found MailChimp-1.0.0, we pull.</p> 
 
             <p>The parameters required to set up integration are:</p>
              
@@ -47,7 +47,7 @@
                <li>Service Node, which is obtained from the last character of the API Key.</li>
             </ul>
 
-            <p>To set up this service must have an active account with its corresponding active API Key in <%= linked_to 'mailchimp.com', 'https://mailchimp.com' %>.</p>
+            <p>To set up this service must have an active account with its corresponding active API Key in <%= link_to 'mailchimp.com', 'https://mailchimp.com' %>.</p>
 
             <p>3. When we have successfully completed the Pull. The Dashboard shown in a group of objects that allow us to interact with the service. Schemas and Data Types.</p>
 
@@ -85,7 +85,7 @@
 
             <p>15. Create a new folder using the admin API and then we note that the new folder is created in Mailchimp too. Add to this new folder two files and when we synchronize the folders, notice that the number of file has been updated.</p>
 
-            <p>16. We are currently working on support to file upload through CenitHub. For more information, please contact us by <%= linked_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
+            <p>16. We are currently working on support to file upload through CenitHub. For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
           </div>
 
         </div>
