--- a/app/views/blog/shipwire_integration.html.erb
+++ b/app/views/blog/shipwire_integration.html.erb
@@ -29,9 +29,9 @@
 
               <h3>Developing:</h3>
 
-              <p>1. First we must locate our CenitHub Data Integrator, in the browser typing the URL  <%= linked_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %>, pressed the button which will ask for username and password, you are not registered in the system, we create an account.</p>
+              <p>1. First we must locate our CenitHub Data Integrator, in the browser typing the URL  <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %>, pressed the button which will ask for username and password, you are not registered in the system, we create an account.</p>
 
-              <p>2. Already with the registered user, we enter CenitHub , where you can see all collections and integrations that our system has. We press Shared Collections, which will show all shared collections, in this case we give pull to Shipwire-2.0.0, insert the username and password credentials that were created on the site <%= linked_to 'www.shipwire.com', 'https://www.shipwire.com' %>, then pull pressed.</p>
+              <p>2. Already with the registered user, we enter CenitHub , where you can see all collections and integrations that our system has. We press Shared Collections, which will show all shared collections, in this case we give pull to Shipwire-2.0.0, insert the username and password credentials that were created on the site <%= link_to 'www.shipwire.com', 'https://www.shipwire.com' %>, then pull pressed.</p>
 
               <p>3. Already in connection roles, we loaded our Shipwire API , then pressed and edit shows the Webhooks and Connections.</p>
 
