--- a/app/views/directory/index.html.erb
+++ b/app/views/directory/index.html.erb
@@ -13,28 +13,39 @@
   <div id="main">
     <div class="row">
       <div class="col-sm-3">
+        <h4><b>Sort by</b></h4>
+        <div class="toggle-container filters-container col-sm-offset-1">
+           <div class="panel">
+            <h4 class="panel-title"><%= link_to 'A ... Z', directory_index_path(order: :asc) %></h4>
+          </div>
+        </div>
+        <div class="toggle-container filters-container col-sm-offset-1">
+           <div class="panel">
+            <h4 class="panel-title"><%= link_to 'Z ... A', directory_index_path(order: :desc) %></h4>
+          </div>
+        </div>
+
         <h4><b>API Specs</b></h4>
-        <div class="toggle-container filters-container">
+        <div class="toggle-container filters-container col-sm-offset-1">
            <div class="panel">
             <h4 class="panel-title"><%= link_to 'RAML', directory_index_path(spec: :raml) %></h4>
           </div>
         </div>
-        <div class="toggle-container filters-container">
+        <div class="toggle-container filters-container col-sm-offset-1">
            <div class="panel">
             <h4 class="panel-title"><%= link_to 'Swagger', directory_index_path(spec: :swagger) %></h4>
           </div>
         </div>
-        
-        <br/>
+
         <h4><b>Categories</b></h4>
-        <div class="toggle-container filters-container">
+        <div class="toggle-container filters-container col-sm-offset-1">
            <div class="panel">
             <h4 class="panel-title"><%= link_to 'All', directory_index_path %></h4>
           </div>
         </div>
         
-        <div class="toggle-container filters-container">
-          <% Tag.all.order_by(name: 'asc').each do |tag| %>
+        <div class="toggle-container filters-container col-sm-offset-1">
+          <% Tag.all.order(name: 'asc').each do |tag| %>
              <div class="panel">
               <h4 class="panel-title"><%= link_to tag.name.titleize, directory_index_path(tag: tag.name) %></h4>
             </div>
