--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -9,7 +9,7 @@
   <%= link_to 'Data Integrator', hub_path, :class => 'item', :class => 'item' %>
   <%= link_to 'ERP & CRM', "#{root_path}#services", :class => 'item', :class => 'item' %>
   <%= link_to 'App Directory', '/directory', :class => 'item', data: { no_turbolink: true } %>
-  <%= link_to 'Pricing', "#{root_path}#pricing", :class => 'item', :class => 'item' %>
+  <% link_to 'Pricing', "#{root_path}#pricing", :class => 'item', :class => 'item' %>
   <%= link_to 'Docs',ENV['DOC_URL'], :class => 'item', :class => 'item' %>
   <%= link_to 'Blog', blog_index_path, :class => 'item', data: { no_turbolink: true } %>
   <%= link_to 'Terms of service', '/terms_of_service', :class => 'item', :class => 'item'%>
