--- a/app/views/directory/show.html.erb
+++ b/app/views/directory/show.html.erb
@@ -70,7 +70,7 @@
           <div class= 'col-sm-9'>
             <table>
               <tr>
-                <td> <%= link_to 'API specs supplied by', 'https://github.com/APIs-guru/api-models' %></td>
+                <td><%= link_to 'API specs supplied by', 'https://github.com/APIs-guru/api-models' %></td>
                 <td> &nbsp;&nbsp;
                   <%= link_to 'https://github.com/APIs-guru/api-models' do %>
                     <%= image_tag 'logos/guru.svg', style: 'height: 50px;' %>
@@ -148,7 +148,7 @@
 
       <div class="row header">
         <h3>Need an easy way to connect your business with <%= link_to @item.name, @item.api_provider || @item.api_homepage || '#' %>?</h3>
-        <p>CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch.</a> </p>
+        <p>CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch</a> </p>
         <br/><br/>
       </div>
       
