--- a/app/views/directory/show.html.erb
+++ b/app/views/directory/show.html.erb
@@ -3,11 +3,21 @@
 
 <div class='container' >
   <div class='col-sm-4'>
-    <% if @item.logo_url.present? %>
-      <%= image_tag @item.logo_url, alt: @item.name, class:'img-responsive', style: "max-width: 200px; background-color: #{@item.logo_background_color if @item.logo_background_color.present?};" %>
-    <% else %>
-      <img src='<%= "#{ENV['S3']}#{@item.slug}.png" %>', width= "102", class='img-responsive', style="max-width: 200px;" alt='<%= @item.name %>' >
-    <% end %>
+    <table style="width:60%">
+      <tr>
+        <td>
+    <div class="section">
+      <div class="pic" style='min-height: 100px;  min-width: 130px;'>
+        <% if @item.logo_url.present? %>
+          <%= image_tag @item.logo_url, alt: @item.name, class:'img-responsive', style: "background-color: #{@item.logo_background_color if @item.logo_background_color.present?};" %>
+        <% else %>
+          <img src='<%= "#{ENV['S3']}#{@item.slug}.png" %>', width= "102", class='img-responsive', alt='<%= @item.name %>' >
+        <% end %>
+      </div>
+    </div>
+  </td>
+  </tr>
+  </table>
   
     <h3><%= title %></h3>
     <br/>
@@ -151,18 +161,31 @@
         <p>CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch</a> </p>
         <br/><br/>
       </div>
-      
+
       <div class='col-sm-offset-4'>
         <table style="width:60%">
           <tr>
-            <td><%= image_tag 'logo_cenitsaas_web.png', style: 'height: 55px;' %></td>
-            <td><%= image_tag 'arrow.png',  style: 'height: 60px;' %></td> 
             <td>
-              <% if @item.logo_url.present? %>
-                <%= image_tag @item.logo_url, alt: @item.name, class:'img-responsive', style: "max-height: 80px; max-width: 200px; padding-left: 17px; min-width: 100px; background-color: #{@item.logo_background_color if @item.logo_background_color.present?};" %>
-              <% else %>
-                <img src='<%= "#{ENV['S3']}#{@item.slug}.png" %>', width= "102", class='img-responsive', style="max-height: 80px; max-width: 200px; padding-left: 17px;" alt='<%= @item.name %>' >
-              <% end %>
+              <div class="section">
+                <div class="pic" style='height: 100px;  width: 150px;'>
+                  <%= link_to root_path, data: { no_turbolink: true } do %>
+                    <%= image_tag 'logo_cenitsaas_web.png', style: 'height: 60px;' %>
+                  <% end %>
+                </div>
+              </div>
+            </td>
+            <td><%= image_tag 'arrow.png',  style: 'height: 60px;margin: 20px;' %></td> 
+            <td>
+              <div class="section">
+                <div class="pic" style='min-height: 100px;  min-width: 130px; max-width: 90%;'>
+                  <% if @item.logo_url.present? %>
+                    <%= image_tag @item.logo_url, alt: @item.name, class:'img-responsive', style: "background-color: #{@item.logo_background_color if @item.logo_background_color.present?};" %>
+                  <% else %>
+                    <img src='<%= "#{ENV['S3']}#{@item.slug}.png" %>', width= "102", class='img-responsive', alt='<%= @item.name %>' >
+                  <% end %>
+                </div>
+              </div>
+
             </td>
           </tr>
         </table>
