added animation for connection

--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -13,6 +13,59 @@
         <% end %>
       </div>
     </div>
+    
+    <div id="apps">
+      <div id="slider">
+        <div class="slide-wrapper">
+          <div class="slideshow">
+            <div class="slide active">
+              <%= image_tag 'screenshots/cenit_shipstation.png', :alt => 'Integration Cenit with Shipstation' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_odoo.png', :alt => 'Integration Cenit with Odoo' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_mailchimp.png', :alt => 'Integration Cenit with Mailchimp' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_shipwire.png', :alt => 'Integration Cenit with Shipwire' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_calendar.png', :alt => 'Integration Cenit with Google Calendar' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_asana.png', :alt => 'Integration Cenit with Asana' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_eventbrite.png', :alt => 'Integration Cenit with Eventbrite' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_mandrill.png', :alt => 'Integration Cenit with Mandrill' %>
+            </div>
+            
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_twilio.png', :alt => 'Integration Cenit with Twilio' %>
+            </div>
+            
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_sugarcrm.png', :alt => 'Integration Cenit with SugarCRM' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_hubspot.png', :alt => 'Integration Cenit with Hubspot' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_tender.png', :alt => 'Integration Cenit with Tender' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_zendesk.png', :alt => 'Integration Cenit with Zendesk' %>
+            </div>
+            <div class="slide">
+              <%= image_tag 'screenshots/cenit_microsoft_dynamics.png', :alt => 'Integration Cenit with Dicrosoft Dynamics CRM' %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="row sections">
       <div class="col-md-2">
@@ -154,6 +207,6 @@
       </div>
 
     </div>
-
   </div>
 </div>
+
