--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -14,23 +14,14 @@
       </div>
     </div>
     
-    <div class='col-sm-offset-4'>
-      <br />
-      <table style="width:60%">
+    <div class='col-sm-offset-2'>
+      <br /><br />
+      <table style="width:80%">
         <tr>
           <td>
             <div class="section">
-              <div class="pic">
-                <%= link_to root_path, data: { no_turbolink: true } do %>
-                  <%= image_tag 'logo_cenitsaas_web.png', style: 'height: 60px;' %>
-                <% end %>
-              </div>
-            </div>
-          </td>
-          <td><%= image_tag 'arrow.png',  style: 'height: 60px;margin: 20px;' %></td> 
-          <td>
-            <div class="section">
               <div class="pic"  style='height: 100px;'>
+                
                 <div id="bulb1" class="lightbulb">
                   <%= image_tag 'integrations/amazon.png', :alt => 'amazon', :class => 'none img-responsive', width: "102", height: "71" %>
                 </div>
@@ -46,54 +37,165 @@
                 <div id="bulb5"  class="lightbulb">
                   <%= image_tag 'integrations/netsuite.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
+
                 <div id="bulb6" class="lightbulb">
-                  <%= image_tag 'integrations/mailchimp.png', :class => 'none img-responsive', width: "102", height: "71"  %>
-                </div>
-                <div id="bulb7" class="lightbulb">
-                  <%= image_tag 'integrations/shipstation.png', :class => 'none img-responsive', width: "102", height: "71"  %>
-                </div>
-                <div id="bulb8" class="lightbulb">
                   <%= image_tag 'integrations/exact_target.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
-                <div id="bulb9" class="lightbulb">
+                
+                <div id="bulb7" class="lightbulb">
                   <%= image_tag 'integrations/jirafe.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
-                <div id="bulb10" class="lightbulb">
+                
+                <div id="bulb8" class="lightbulb">
                   <%= image_tag 'integrations/ql.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
-                <div id="bulb11" class="lightbulb">
-                  <%= image_tag 'integrations/mandrill.png', :class => 'none img-responsive', width: "102", height: "71"  %>
-                </div>
-                <div id="bulb12" class="lightbulb">
+                
+                <div id="bulb9" class="lightbulb">
                   <%= image_tag 'integrations/sf.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
-                <div id="bulb13" class="lightbulb">
+                <div id="bulb10" class="lightbulb">
                   <%= image_tag 'integrations/ebay.jpg', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
                 
-                <div id="bulb14" class="lightbulb">
+                <div id="bulb11" class="lightbulb">
                   <%= image_tag 'integrations/aftership.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
+
                 
-                <div id="bulb15" class="lightbulb">
-                  <%= image_tag 'integrations/shipwire.png', :class => 'none img-responsive', width: "102", height: "71"  %>
-                </div>
-                
-                <div id="bulb16" class="lightbulb">
+                <div id="bulb12" class="lightbulb">
                   <%= image_tag 'integrations/zendesk.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
                 
-                <div id="bulb17" class="lightbulb">
+                <div id="bulb13" class="lightbulb">
                   <%= image_tag 'integrations/square.png', :class => 'none img-responsive', width: "102", height: "71"  %>
                 </div>
                 
-                <div id="bulb18" class="lightbulb">
+                <div id="bulb14" class="lightbulb">
                   <%= image_tag 'integrations/odoo.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="bulb15" class="lightbulb">
+                  <%= image_tag 'integrations/magento.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="bulb16" class="lightbulb">
+                  <%= image_tag 'integrations/sugarcrm.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="bulb17" class="lightbulb">
+                  <%= image_tag 'integrations/shopify.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="bulb18" class="lightbulb">
+                  <%= image_tag 'integrations/asana.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;" %>
+                </div>
+                
+                <div id="bulb19" class="lightbulb">
+                  <%= image_tag 'integrations/trello.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="bulb20" class="lightbulb">
+                  <%= image_tag 'integrations/woocommerce.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="bulb21" class="lightbulb">
+                  <%= image_tag 'integrations/bigcommerce.jpeg', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="bulb22" class="lightbulb">
+                  <%= image_tag 'integrations/oscommerce.jpeg', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
                 </div>
                 
               </div>
             </div>
+          </td>
+          <td><%= image_tag 'arrow.png',  style: 'height: 60px;margin: 20px;' %></td> 
+          <td>
+            <div class="section">
+              <div class="pic">
+                <%= link_to root_path, data: { no_turbolink: true } do %>
+                  <%= image_tag 'logo_cenitsaas_web.png', style: 'height: 50px;' %>
+                <% end %>
+              </div>
+            </div>
+          </td>
+          <td><%= image_tag 'arrow.png',  style: 'height: 60px;margin: 20px;' %></td> 
+          <td>
+            <div class="section">
+              <div class="pic"  style='height: 100px;'>
+                <div id="rbulb1" class="rlightbulb">
+                  <%= image_tag 'integrations/amazon.png', :alt => 'amazon', :class => 'none img-responsive', width: "102", height: "71" %>
+                </div>
+                <div id="rbulb2" class="rlightbulb">
+                  <%= image_tag 'integrations/desk.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb3"  class="rlightbulb">
+                  <%= image_tag 'integrations/bronto.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb4"  class="rlightbulb"> 
+                  <%= image_tag 'integrations/quickbooks.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb5"  class="rlightbulb">
+                  <%= image_tag 'integrations/netsuite.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb6" class="rlightbulb">
+                  <%= image_tag 'integrations/mailchimp.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb7" class="rlightbulb">
+                  <%= image_tag 'integrations/shipstation.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb8" class="rlightbulb">
+                  <%= image_tag 'integrations/exact_target.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb9" class="rlightbulb">
+                  <%= image_tag 'integrations/jirafe.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb10" class="rlightbulb">
+                  <%= image_tag 'integrations/ql.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb11" class="rlightbulb">
+                  <%= image_tag 'integrations/mandrill.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb12" class="rlightbulb">
+                  <%= image_tag 'integrations/sf.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb13" class="rlightbulb">
+                  <%= image_tag 'integrations/ebay.jpg', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                <div id="rbulb14" class="rlightbulb">
+                  <%= image_tag 'integrations/aftership.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="rbulb15" class="rlightbulb">
+                  <%= image_tag 'integrations/shipwire.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="rbulb16" class="rlightbulb">
+                  <%= image_tag 'integrations/zendesk.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="rbulb17" class="rlightbulb">
+                  <%= image_tag 'integrations/square.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="rbulb18" class="rlightbulb">
+                  <%= image_tag 'integrations/odoo.png', :class => 'none img-responsive', width: "102", height: "71"  %>
+                </div>
+                
+                <div id="rbulb19" class="rlightbulb">
+                  <%= image_tag 'integrations/sugarcrm.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="rbulb20" class="rlightbulb">
+                  <%= image_tag 'integrations/asana.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
+                
+                <div id="rbulb21" class="rlightbulb">
+                  <%= image_tag 'integrations/trello.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                </div>
 
+              </div>
+            </div>
           </td>
         </tr>
       </table>
@@ -250,13 +352,25 @@
     get_random_bulb();
     
     function get_random_bulb() {
-        var a = (parseInt(Math.random() * 18));
+        var a = (parseInt(Math.random() * 22));
         $(".lightbulb img.block").removeClass("block").addClass("none");
         $(".lightbulb:eq(" + a + ") img").removeClass("none").addClass("block");
     }
     
     setInterval(function () {
         get_random_bulb();
+    }, 1000);
+    
+    get_random_rbulb();
+    
+    function get_random_rbulb() {
+        var a = (parseInt(Math.random() * 21));
+        $(".rlightbulb img.block").removeClass("block").addClass("none");
+        $(".rlightbulb:eq(" + a + ") img").removeClass("none").addClass("block");
+    }
+    
+    setInterval(function () {
+        get_random_rbulb();
     }, 1000);
  });
 </script>
