fixed icon images

--- a/app/views/shared/_services.html.erb
+++ b/app/views/shared/_services.html.erb
@@ -101,11 +101,11 @@
                 <div id="bulb21" class="lightbulb">
                   <%= image_tag 'integrations/bigcommerce.jpeg', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
                 </div>
-                
+
                 <div id="bulb22" class="lightbulb">
-                  <%= image_tag 'integrations/oscommerce.jpeg', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
+                  <%= image_tag 'integrations/oscommerce.png', :class => 'none img-responsive', width: "102", height: "71", style: "background-color: white;"  %>
                 </div>
-                
+
               </div>
             </div>
           </td>
