--- a/app/views/shared/_odoo.html.erb
+++ b/app/views/shared/_odoo.html.erb
@@ -3,7 +3,10 @@
  <div id='services' class="container text-center">
    
    <div class="row header">
-     <h3>Online ERP & CRM workspace with Odoo</h3>
+     <h3><strong style='color: #ea7400;'>100% free</strong> online ERP & CRM workspace with Odoo</h3>
+     <p>
+       Improves all processes involved in e‑commerce with unlimited users, addons and space.
+     </p>
    </div>
  
     <div class="row">
