modified price table

--- a/app/views/shared/_prices.html.erb
+++ b/app/views/shared/_prices.html.erb
@@ -22,12 +22,12 @@
               team members
             </div>
             <div class="spec">
-              <span class="variable">5 GB</span>
-              disc space
+              <span class="variable">Odoo</span>
+              online ERP & CRM 
             </div>
             <div class="spec">
-              <span class="variable">ERP</span>
-              workspace tenant
+              <span class="variable">5 GB</span>
+              in data integrator tool
             </div>
             <div class="spec">
               <span class="variable">Unlimited</span>
@@ -52,7 +52,7 @@
             </div>
             <div class="spec">
               <span class="variable"> $10 x GB </span>
-              over 5 GB
+              over 5 GB in data integrator tool
             </div>
             <div class="spec">
               <span class="variable"> $0.5 per </span>
