Fixing Blog 'Cenit API Collections for Google Services'

--- a/app/views/blog/cenit_api_collections_for_google_services.html.erb
+++ b/app/views/blog/cenit_api_collections_for_google_services.html.erb
@@ -16,6 +16,7 @@
             <%= title %>
           </div>
           <div class="author">
+            <%= image_tag 'team/maikel.jpg', :alt => 'author', class: "avatar" %>
             Maikel Arcia, Jan 28, 2016
           </div>
 
@@ -170,6 +171,8 @@
               integrations very much easier, so follow us to get the latest news
               about Cenit Collections, we will come very soon with more of that.
             </p>
+
+            <p>For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
           </div>
         </div>
       </div>
