--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -16,6 +16,7 @@
               <%= link_to 'Cenit API Collections for Google Services', cenit_api_collections_for_google_services_blog_index_path, data: { no_turbolink: true } %>
             </div>
             <div class="author">
+              <%= image_tag 'team/maikel.jpg', :alt => 'author', class: "avatar" %>
               By Maikel Arcia, Jan 28, 2016
             </div>
             <p class="intro">
