--- a/app/views/blog/cenit_api_collections_for_google_services.html.erb
+++ b/app/views/blog/cenit_api_collections_for_google_services.html.erb
@@ -34,9 +34,7 @@
               build a translator to convert a Swagger 2.0 specification into a
               Cenit Collection Format and we have use it to translate the Google
               APIs specifications available at the
-              <font color="#1155cc"><u><a href="http://apis.guru/">API</a><a href="http://apis.guru/">
-              </a><a href="http://apis.guru/">Guru</a><a href="http://apis.guru/">
-              </a><a href="http://apis.guru/">repository</a></u></font>.</p>
+              <font color="#1155cc"><u><a href="http://apis.guru/">APIs.guru repository</a></u></font>.</p>
 
 
             <p align="center">
