fixing wording in post

--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -23,9 +23,9 @@
               Now there are available on CenitHub over 80 API collections to
               connect with the Google services that can be used to integrate with
               any solution. With Cenit you can have full access to an entire API through a
-              single authorization point and customize responses actions to fix
+              single authorization point and customize responses actions to fit
               your needs. There are over 200 APIs specifications on the API Guru
-              repository we are working on to bring them to Cenit users, so follows
+              repository, we are working on to bring them to Cenit users, so follows
               us to get updated about that. You can try it for free following instructions in these post.
             </p>
             <%= link_to 'Continue reading ...', cenit_api_collections_for_google_services_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
