--- a/app/views/blog/cenit_api_collections_for_google_services.html.erb
+++ b/app/views/blog/cenit_api_collections_for_google_services.html.erb
@@ -24,15 +24,15 @@
 
             <p>
               <a href="https://www.cenitsaas.com/"><font color="#1155cc"><u>Cenit</u></font></a>
-              have been designed to integrate solutions by orchestrating data flows
-              that may involve several APIs, so to be able to connect to an API is
+              has been designed to integrate solutions by orchestrating data flows
+              that may involve several APIs, so  being able to connect to an API is
               one of the basic functionalities that are supported.</p>
 
             <p>
-              The most of the core concepts of Swagger 2.0 API specification can be
-              associated with a corresponding one on Cenit. Based on these we have
-              build a translator to convert a Swagger 2.0 specification into a
-              Cenit Collection Format and we have use it to translate the Google
+              Most of the core concepts of Swagger 2.0 API specification can be
+              associated with a corresponding one in Cenit. Based on this we have
+              built a translator to convert a Swagger 2.0 specification into a
+              Cenit Collection Format and we have used it to translate the Google
               APIs specifications available at the
               <font color="#1155cc"><u><a href="http://apis.guru/">API</a><a href="http://apis.guru/">
               </a><a href="http://apis.guru/">Guru</a><a href="http://apis.guru/">
@@ -49,14 +49,14 @@
               Now there are available on CenitHub over 80 API collections to
               connect with the Google services that can be used to integrate with
               any solution. With Cenit you can have full access to an entire API through a
-              single authorization point and customize responses actions to fix
+              single authorization point and customize responses actions to fit
               your needs. There are over 200 APIs specifications on the API Guru
-              repository we are working on to bring them to Cenit users, so follows
+              repository, we are working on to bring them to Cenit users, so follows
               us to get updated about that.</p>
 
             <p>
-              You can easy try an API by following the next steps for yourself
-              singing up for free in CenitSaaS.</p>
+              You can easily try an API by following the next steps by yourself
+              signing up for free in CenitSaaS.</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               Trying a Cenit API Collection</h1>
@@ -64,9 +64,9 @@
             <p>
               To test an API just go into the CenitHub with your
               <a href="https://cenitsaas.com/"><font color="#1155cc"><u>CenitSaaS</u></font></a>
-              account and search for the API on the Cenit Shared Collections. If
-              you do not have a <a href="https://cenitsaas.com/"><font color="#1155cc"><u>CenitSaaS</u></font></a>
-              account go anyway and create one, it’s free.</p>
+              account and search for the API in the Cenit Shared Collections. If
+              you do not have an <a href="https://cenitsaas.com/"><font color="#1155cc"><u>CenitSaaS</u></font></a>
+              account go on anyway and create one, it’s free.</p>
 
             <p align="center">
               <%= image_tag 'blog/shared_collections.png', :alt => 'shared collections', class: "img-responsive" %>
@@ -92,12 +92,12 @@
               Cenit implements several authorization protocols. Specifically in the
               case of Oauth 2.0 it will prompt the provider page for the user
               consent and store the access token on the user account. Cenit is also
-              capable of automatically refresh the access token if they are needed
-              and have been expired.</p>
+              capable of automatically refresh the access tokens if they are needed
+              and have expired.</p>
 
             <p>
               Now you have authorized Cenit to access the API, you are ready to
-              taste it. Just go to the Webhook model and select one to try:</p>
+              try it. Just go to the Webhook model and select one to try:</p>
 
             <p align="center">
               <%= image_tag 'blog/webhook_submit.png', :alt => 'shared collections', class: "img-responsive" %>
@@ -105,8 +105,8 @@
 
             <p>
               When the Submit action is executed the first step is to choose the
-              connection to be used for the webhook submission. Selecting the
-              default connection and clicking next, then Cenit build a form to let
+              connection to be used for the webhook submission. First you have to select the
+              default connection and click next, then Cenit builds a form to let
               you specify the parameter values that are initially fulfilled with
               the default ones.</p>
 
@@ -122,20 +122,20 @@
             </p>
 
             <p>
-              And that’s all, you successfully connect with an API through Cenit.</p>
+              And that’s all, you have successfully connected with an API through Cenit.</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               Swagger 2.0 Cenit Collection</h1>
 
             <p>
-              Combining every scheme with the basePath on a Swagger 2.0
-              specification there can be defined the possible URLs the API can
-              accept. Those URLs can be mapped into the Cenit Connection model. The
-              paths specification in the other hand, should be mapped into the
+              By combining every scheme with the basePath on a Swagger 2.0
+              specification, the possible URLs that API can
+              accept can be defined. Those URLs can be mapped into the Cenit Connection model. The
+              paths specification ,on the other hand, should be mapped into the
               Cenit Webhook model.</p>
 
             <p>
-              Both models, Connection and Webhook supports the specification of
+              Both models, Connection and Webhook support the specification of
               parameters, which are of three kinds: headers, parameters and
               template parameters. Swagger 2.0 API specification characterize every
               parameter with the location entry 'in', which specify where the
@@ -149,30 +149,30 @@
               structure of the API resources and the format of parameters. Cenit
               supports the definitions of data types based on JSON schema, so all
               the definitions of a Swagger 2.0 can be mapped into a Library of Data
-              Types in Cenit.</p>
+              Types.</p>
 
             <p>
               Security definitions can be mapped into Cenit Authorizations. In the
               case of OAuth2 security protocol, the API may define different scopes
               for each path. Cenit can associate authorizations to connections and
               webhooks. For convenience, all paths OAuth2 scopes can be factorized
-              and include them in a single OAuth2 Authorization for the entire API.
-              Assigning such authorization to the default API connection all
+              and included  in a single OAuth2 Authorization for the entire API.
+              By assigning such authorization to the default API connection all
               webhooks become automatically authorized.</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto"><a name="h.upe549z9qgg5"></a>
               What’s next</h1>
 
             <p>
-              Interacting with an API may be a little awkward, for example the
-              Gmail API exchange email data in MIME format and encoded following a
-              base64 protocol. We are working Cenit Collections build on top of the
-              API ones to bring to you a set of intuitive collection to make
+              Interacting with an API may be a little awkward. For example, the
+              Gmail API exchanges email data in MIME format, encoded following a
+              base64 protocol. We are working on Cenit Collections built on top of the
+              API ones to bring  you a set of intuitive collection to make
               integrations very much easier, so follow us to get the latest news
               about Cenit Collections, we will come very soon with more of that.
             </p>
 
-            <p>For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the address email <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
+            <p>For more information, please contact us by <%= link_to 'www.cenitsaas.com', 'https://www.cenitsaas.com' %> or send us a message to the email address <a href="mailto:support@cenit.io" target="_top">support@cenit.io</a></p>
           </div>
         </div>
       </div>
